# MORFEUS-Source

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  API-doc-FORD-file.md  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  fix-white-space.elisp  index.html  search.html
src/FD/: CMakeLists.txt  README.md  doc-generator.md
src/FD/geometry/: block_metadata_implementation.f90  block_metadata_interface.F90  block_metadata_interface.f90  cylinder_2D_implementation.F90  cylinder_2D_interface.F90  geometry_implementation.f90  geometry_interface.f90  plate_3D_implementation.F90  plate_3D_interface.F90  sphere_1D_implementation.F90  sphere_1D_interface.F90
src/FD/grid/: CMakeLists.txt  cartesian_grid_implementation.f90  cartesian_grid_interface.f90  curvilinear_grid_interface.f90  cylindrical_grid_interface.f90  differentiable_field_interface.f90  ellipsoidal_field_implementation.f90  ellipsoidal_field_interface.f90  grid_implementation.f90  grid_interface.F90  inbox_implementation.f90  inbox_interface.f90  package_implementation.F90  package_implementation.f90  package_interface.F90  package_interface.f90  problem_discretization_implementation.F90  problem_discretization_interface.F90  rectangular_grid_interface.f90  spherical_1D_conductor_implementation.F90  spherical_1D_conductor_interface.F90  spherical_1D_solver_implementation.F90  spherical_1D_solver_interface.F90  spherical_1D_solver_module.F90  spherical_1D_solver_submodule.F90  spherical_grid_implementation.f90  spherical_grid_interface.f90  structured_grid_implementation.F90  structured_grid_implementation.f90  structured_grid_interface.F90  surfaces_implementation.F90  surfaces_implementation.f90  surfaces_interface.F90  surfaces_interface.f90  units_implementation.F90  units_implementation.f90  units_interface.F90
src/FD/tests/: 3d_derivative.f90  CMakeLists.txt
src/FD/tests/integration/: 3Dplate-high-resolution.json  CMakeLists.txt  test-differentiate-cylindrical-grid.F90  test-differentiate-grid.F90  test-differentiate-grid.f90  test-differentiate-spherical-grid.F90  test-discretize-2D-cylinder.F90  test-discretize-3D-plate.F90  test-plate-material-mapping.F90  test-write-slab-vtk.F90  test-write-voxels-vtk.F90  test-write-vtk-voxels.F90
src/FD/tests/unit/: 1Dsphere.json  2Dcylinder.json  3Dplate-high-resolution-layers.json  3Dplate-low-resolution-halo.json  3Dplate-low-resolution-layers-material-map.json  3Dplate-low-resolution-layers.json  3Dplate-low-resolution.json  3Dplate-min-resolution-layers.json  CMakeLists.txt  a.out  label-corner-blocks.F90  material-map.F90  problem_description.json  test-1d-sphere.f90  test-adi-time-advancing.f90  test-array-functions.f90  test-assertions.f90  test-block-structure.f90  test-emulated-intrinsics.F90  test-halo-exchange.f90  test-problem-discretization.f90  test-read-geometry.f90  test-spatial-derivatives-new.f90  test-spatial-derivatives.f90  test-structured-grid.F90  test-units.f90  test-write-problem-discretization.f90
src/FD/utilities/: CMakeLists.txt  array_functions_implementation.f90  array_functions_interface.f90  assertions_implementation.F90  assertions_interface.F90  co_object_implementation.f90  co_object_interface.f90  emulated_intrinsics_implementation.F90  emulated_intrinsics_interface.F90  kind_parameters.f90  object_implementation.f90  object_interface.f90  string_functions_implementation.f90  string_functions_interface.f90
src/FV/: CMakeLists.txt  README.outdated  fv-documentation.md  nemo-ab-notes.txt  prerequisites-versions
src/FV/cmake/: uninstall.cmake.in
src/FV/cmake/FindModules/: FindCGNS.cmake  FindMETIS.cmake  FindNETCDF.cmake  FindPSBLAS.cmake
src/FV/cmake/modules/: AddParallelTest.cmake
src/FV/docs/pdf/: install.tex  mesh_motion.tex
src/FV/docs/uml/: nemo.uml
src/FV/src/basics/: class_connectivity.f90  class_connectivity_procedures.f90  class_dimensions.f90  class_dimensions_procedures.f90  class_keytable.f90  class_keytable_procedures.f90  class_psblas.f90  class_psblas_procedures.f90  class_stopwatch.f90  class_stopwatch_procedures.f90  class_vector.f90  class_vector_procedures.f90  tools_psblas.f90  tools_psblas_procedures.f90  type_table.f90  type_table_procedures.f90
src/FV/src/bc/: class_bc.f90  class_bc_math.f90  class_bc_math_procedures.f90  class_bc_procedures.f90  class_bc_wall.f90  class_bc_wall_procedures.f90  rd_inp_bc.f90  rd_inp_bc_math.f90  tools_bc.f90
src/FV/src/field/: class_discretization.f90  class_discretization_procedures.f90  class_field.f90  class_field_procedures.f90  class_scalar_field.f90  class_scalar_field_procedures.f90  class_vector_field.f90  class_vector_field_procedures.f90
src/FV/src/input/: find_section.f90  get_par_d.f90  get_par_h.f90  get_par_i.f90  get_par_l.f90  get_par_v.f90  open_file.F90  read_par_d.f90  read_par_h.f90  read_par_i.f90  read_par_l.f90  read_par_v.f90  tools_input.f90  tools_input_procedures.f90
src/FV/src/material/: class_material.f90  class_material_procedures.f90  load_material.f90  mat_copper.f90  mat_copper_procedures.f90  mat_water.f90  mat_water_procedures.f90  rd_inp_material.f90  tools_material.f90
src/FV/src/math/: cart_to_polar_implementation.f90  cholesky_implementation.f90  class_iterating.f90  class_iterating_procedures.f90  isort_implementation.f90  lin_interp_implementation.f90  lu_implementation.F90  lu_implementation.f90  psb_build_prec.f90  psb_solve_sys_implementation.f90  pwl_implementation.f90  tools_math.f90
src/FV/src/mesh/: class_mesh.F90  class_mesh_procedures.F90  cmp_mesh_desc.f90  cmp_mesh_implementation.f90  part_block.f90  part_block_procedures.f90  part_graph.f90  part_graph_procedures.f90  part_random.f90  part_random_procedures.f90  rd_cgns_mesh.F90  rd_exodus_mesh.f90  rd_gambit_implementation.f90  rd_gmsh_implementation.f90  rd_inp_implementation.f90  rd_inp_mesh_implementation.f90  renum.F90  renum_gps.f90  renum_procedures.F90  supplement_implementation.f90  tools_mesh.f90  tools_part.f90  tools_part_procedures.f90
src/FV/src/mesh_basics/: class_cell.F90  class_cell_procedures.F90  class_cylinder.f90  class_face.F90  (+21 more)
(+2221 files in other folders)
